0.7.1  -  12 May 2014

    * Multi: win32 support (arirux)
    + Multi.remove
    * lwt: handle Lwt.cancel
    * lwt: fix set_errorbuffer

0.7.0  -  8 Mar 2014

    * Curl_lwt: basic Lwt interface
    * make Curl.t a custom value (with compare and hash)
    * set_readfunction: assert correct length, do not silently truncate data
    * generate ocamldoc html with `make doc`
    * fix build: set CFLAGS for feature tests

0.6.1  -  11 Feb 2014

    * fix type of set_seekfunction
    * fix handling of exceptions from callbacks (break the transfer)
    + CURLINFO_CONDITION_UNMET TIMECOND_NONE TIMECOND_LASTMOD
    * fix build on windows
    * expose Curl.t underlying Curl.handle object
    * implement Curl.handle#get_redirecturl

0.6.0  -  29 Aug 2013

    * introduce bindings to asynchronous multi interface
    + Multi: set_socket_function set_timer_function action_all action_timeout action timeout
    * treat SSLVERIFYHOST_EXISTENCE as SSLVERIFYHOST_HOSTNAME, previous workaround was broken
    * MSVC compatibility
    * configure: do not override CFLAGS
    * expose set_sshprivatekeyfile

0.5.6  -  21 Mar 2013

    * configure: more robust test for libcurl

0.5.5  -  23 Feb 2013

    + CURLINFO_LOCAL_IP CURLINFO_LOCAL_PORT
    + pause
    + compatibility fixes for old libcurl versions

0.5.4  -  29 Jan 2013

    Makefile: add release target
    add CHANGES.txt
    Makefile: add distclean target

Older changes:

2012
    version_info: return features as list of strings
    more version info fields
    replace SSLVERIFYHOST_EXISTENCE with SSLVERIFYHOST_HOSTNAME for new libcurl
    + CURLOPT_RESOLVE CURLOPT_DNS_SERVERS
    + CURLOPT_PROTOCOLS and CURLOPT_REDIR_PROTOCOLS
    update Copyright
    fix free_curl_slist (crash with 7.24.0)
    Makefile: add uninstall target
    update ocaml m4 macros (in particular ocamlfind will be used by default, if present)
    + CURLINFO_PRIMARY_IP

2011
    + CURLOPT_PROXYTYPE
    + CURLOPT_OPENSOCKETFUNCTION
    + SSLVERIFYHOST_NONE